tests/ui/panic-handler/panic-handler-wrong-location.stderr
error: `#[panic_handler]` function required, but not found

error: `#[panic_handler]` attribute cannot be used on statics
  --> $DIR/panic-handler-wrong-location.rs:6:1
   |
LL | #[panic_handler]
   | ^^^^^^^^^^^^^^^^
   |
   = help: `#[panic_handler]` can only be applied to functions

error: aborting due to 2 previous errors

